log
In file included from Mode/Mode.cpp:1:
In file included from Server/../Client/../Channel/../Mode/Mode.hpp:4:
In file included from Server/../Client/../Channel/../Rand.hpp:141:
In file included from Mode/../Server/Server.hpp:4:
In file included from Server/../Client/Client.hpp:4:
Server/../Client/../Channel/Channel.hpp:19:7: error: field has incomplete type 'Mode'
        Mode _channelOccupantsMode[MAX_OCCUPANTS_CHAN];
             ^
Server/../Client/../Channel/Channel.hpp:8:7: note: forward declaration of 'Mode'
class Mode;
      ^
1 error generated.
